--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,9 @@ services:
     container_name: frontend
     ports:
       - 5173:5173
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
 
 volumes:
     postgres_db:
