--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "@prisma/client": "^6.12.0",
-    "express": "^5.1.0"
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "multer": "^2.0.2"
   },
   "name": "backend",
   "version": "1.0.0",
