--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "@prisma/client": "^6.12.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-openid-connect": "^2.19.2"
   },
   "name": "backend",
   "version": "1.0.0",
