adds basic upload endpoint with gemini api

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,4 +9,4 @@ RUN npm install -g prisma
 
 COPY . .
 
-CMD ["sh", "-c", "npm run db:init && npx prisma generate && npm run dev"]
+CMD ["sh", "-c", "mkdir -p storage/uploads && mkdir -p storage/processed && npm run db:init && npx prisma generate && npm run dev"]
