--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,1 +1,2 @@
 DATABASE_URL=postgresql://{db_username}:{db_password}@{db_host}:5432/{db_name}?schema=public
+GEMINI_API_KEY={your_gemini_api_key_here}
