--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
+    "@google/genai": "^1.21.0",
     "@prisma/client": "^6.12.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^5.1.0",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "node-fetch": "^3.3.2"
   },
   "name": "backend",
   "version": "1.0.0",
