--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
         condition: service_healthy
     env_file:
       - ./backend/.env
+    volumes:
+      - ./backend/storage:/app/storage
     stdin_open: true
     tty: true
 
