--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,2 +1,9 @@
 DATABASE_URL=postgresql://{db_username}:{db_password}@{db_host}:5432/{db_name}?schema=public
 GEMINI_API_KEY={your_gemini_api_key_here}
+
+MINIO_ENDPOINT={minio_endpoint}
+MINIO_PORT={minio_port}
+MINIO_USE_SSL={true_or_false}
+MINIO_ACCESS_KEY={minio_access_key}
+MINIO_SECRET_KEY={minio_secret_key}
+MINIO_BUCKET_NAME={minio_bucket_name}
