--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
+    "minio": "^8.0.6",
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2"
   },
