--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,6 @@ services:
         condition: service_healthy
     env_file:
       - ./backend/.env
-    volumes:
-      - ./backend/storage:/app/storage
     stdin_open: true
     tty: true
 
@@ -41,5 +39,19 @@ services:
       - ./frontend:/app
       - /app/node_modules
 
+  minio:
+      image: minio/minio:latest
+      container_name: minio
+      ports:
+        - 9000:9000
+        - 9001:9001
+      environment:
+        MINIO_ROOT_USER: admin
+        MINIO_ROOT_PASSWORD: password
+      command: server /data --console-address ":9001"
+      volumes:
+        - minio_data:/root/.minio_data
+
 volumes:
     postgres_db:
+    minio_data:
