--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,13 @@
 {
   "dependencies": {
+    "@google/genai": "^1.21.0",
     "@prisma/client": "^6.12.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^5.1.0",
-    "express-openid-connect": "^2.19.2"
+    "minio": "^8.0.6",
+    "multer": "^2.0.2",
+    "node-fetch": "^3.3.2"
   },
   "name": "backend",
   "version": "1.0.0",
