Fixes signed images url to be permanent

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -7,3 +7,4 @@ MINIO_USE_SSL={true_or_false}
 MINIO_ACCESS_KEY={minio_access_key}
 MINIO_SECRET_KEY={minio_secret_key}
 MINIO_BUCKET_NAME={minio_bucket_name}
+MINIO_PUBLIC_URL={minio_public_url}
