--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
     "@google/genai": "^1.21.0",
     "@prisma/client": "^6.12.0",
     "argon2": "^0.44.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
