--- a/backend/.env.template
+++ b/backend/.env.template
@@ -8,3 +8,5 @@ MINIO_ACCESS_KEY={minio_access_key}
 MINIO_SECRET_KEY={minio_secret_key}
 MINIO_BUCKET_NAME={minio_bucket_name}
 MINIO_PUBLIC_URL={minio_public_url}
+
+FRONTEND_URL={frontend_url}
